# quantitative-sentiment-analysis

./: .gitignore  AGENTS.md  README.md  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml
.github/workflows/: ai-code-review.yml  ci.yml
context/: architect-report.md
context/deployment/: deploy-plan.md
context/domain/: 01-domain-distillation.md  02-invariant-aggregate-refactor.md  03-anti-corruption-layer.md
context/foundation/: infrastructure.md  news-sentiment-policy.md  prd.md  quality-contracts.md  roadmap.md  shape-notes.md  tech-stack.md  test-plan.md
context/team/: mom-test-validation.md  opportunity-map.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.ts  App.tsx  styles.css
migrations/: env.py
migrations/versions/: 20260616_0001_create_auth_workspace_backtest_tables.py  20260616_0002_add_backtest_run_history_sort_index.py  20260616_0003_create_price_candles.py
src/quantitative_sentiment_analysis/: __init__.py  main.py
tests/: __init__.py  postgres_helpers.py  test_main.py
tests/auth/: test_router.py  test_schemas.py  test_security.py
tests/backtest_configs/: __init__.py  test_draft_from_config.py  test_repository.py  test_router.py  test_schemas.py
tests/backtest_dataset/: __init__.py  test_determinism.py  test_export.py  test_normalization.py  test_orchestrator.py  test_postgres_repository.py  test_provider.py  test_repository.py  test_router.py  test_schemas.py
tests/backtest_quality/: __init__.py  fixtures.py  (+4 more)
(+181 files in other folders)
