[project]
name = "quantitative-sentiment-analysis"
version = "0.1.0"
description = "FastAPI service for deterministic BTCUSD sentiment backtest datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantitative_sentiment_analysis"]
