[project]
name = "quantitative-sentiment-analysis"
version = "0.1.0"
description = "FastAPI service for deterministic BTCUSD sentiment backtest datasets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantitative_sentiment_analysis"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "context/archive",
    "frontend/dist",
    "frontend/node_modules",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "context/archive",
    "frontend",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.17",
]
